# UA-token

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  UA-token  UA-token.json  VOLYACHAIN.md  WLY-TESTING.md  WLY-token.json  governance-framework.md  package.json  requirements.txt  smart-contracts-template.sol  test-wly-chain.js  test-wly-chain.py  test-wly-chain.sh  test_volyachain.py  volyachain-specs.md  volyachain_cli.py  volyachain_config.json  wly-metadata.json
blockchain/: __init__.py  block.py  volyachain.py
config/: networks.md
docs/: deployment-guide.md
programs/ua-token-governance/: Cargo.toml
programs/ua-token-governance/src/: lib.rs
programs/ua-token-staking/: Cargo.toml
programs/ua-token-staking/src/: lib.rs
scripts/: deploy.js  initialize.js  validate.js
tests/: blockchain-infrastructure.test.js
