[package]
name = "ua-token-blockchain"
version = "0.1.0"
description = "UA Token blockchain deployment and smart contracts"
edition = "2021"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
solana-program = "1.16.0"

[dev-dependencies]
solana-sdk = "1.16.0"
solana-client = "1.16.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "deploy"
path = "scripts/deploy.rs"

[[bin]]
name = "initialize"
path = "scripts/initialize.rs"