[package]
name = "ua-token-staking"
version = "0.1.0"
description = "UA Token staking smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ua_token_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"